--- a/task2/task2-be/package.json
+++ b/task2/task2-be/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.10",
     "nodemon": "^2.0.15",
